Make many things

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
     </div>
 
     <div id="nav" >
-        <a title="Best score table" href="#">B</a>
+        <a title="Best score table" href="{{ path('score') }}">B</a>
         <a title="Contact us" href="#">C</a>
     </div>
 
